--- a/date/2024-10/page-2.htm
+++ b/date/2024-10/page-2.htm
@@ -300,8 +300,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-25475.htm">动物预防接种计划表（动物预防接种实验报告）</a></h4>
-                <p>摘要：       今天给各位分享动物预防接种计划表的知识，其中也会对动物预防接种实验报告进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、怎样编制猪场防疫计划.</p>
+                <h4><a href="/free-nodes/2024-12-9-clash-node.htm">12月9日更新18M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、香港、韩国、欧洲、日本、美国等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -310,8 +310,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-31-free-shadowrocket-node.htm">12月31日更新20.4M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、欧洲、日本、新加坡、加拿大、香港、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-26407.htm">动物生物疫苗工资 动物生物疫苗工资高吗</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物生物疫苗工资的问题，于是小编就整理了4个相关介绍动物生物疫苗工资的解答，让我们一起看看吧。牧原兽医待遇怎么样？万泰生物待遇怎</p>
             </div>
         </div>
     </div>
@@ -320,8 +320,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-17-clash-node-daily-updates.htm">10月17日更新21.5M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、香港、韩国、美国、新加坡等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-25940.htm">git下载、安装、配置与简单应用</a></h4>
+                <p>目录 1 git下载、安装与配置 1.1下载与安装 1.1.1登录git官网：Git (git-scm.com)点击击图中红线圈出的Downloads,进入下载页面。 1.1.2根据自己系统，下载相应</p>
             </div>
         </div>
     </div>
@@ -330,8 +330,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-3-free-v2ray.htm">12月3日更新20.4M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、香港、新加坡、美国、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-20-free-node-subscribe.htm">11月20日更新20.5M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、欧洲、新加坡、韩国、美国、日本、香港等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -340,8 +340,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-21329.htm">动物疫苗相关股票有哪些（动物疫苗板块前景分析）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物疫苗相关股票有哪些，以及动物疫苗板块前景分析对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、2022动物疫苗概念龙头股有哪些?... </p>
+                <h4><a href="/news/article-37798.htm">同城免费领养宠物怎么领取 同城免费领养宠物怎么领取的</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于同城免费领养宠物怎么领取的问题，于是小编就整理了4个相关介绍同城免费领养宠物怎么领取的解答，让我们一起看看吧。58上怎么发布免费</p>
             </div>
         </div>
     </div>
@@ -350,8 +350,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-27-free-clash-subscribe.htm">11月27日更新21.1M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、加拿大、香港、美国、欧洲、韩国、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-44730.htm">违背宠物领养协议怎么处理的（宠物领养条约）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈违背宠物领养协议怎么处理的，以及宠物领养条约对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠物领养协议是否有法律效力...       </p>
             </div>
         </div>
     </div>
@@ -360,8 +360,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-19038.htm">动物诊疗机构管理与执业兽医制度规范（动物诊疗机构应当具备的条件）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物诊疗机构管理与执业兽医制度规范，以及动物诊疗机构应当具备的条件对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、执业兽医管理办法... </p>
+                <h4><a href="/news/article-31093.htm">广州卖狗市场（广州卖狗狗批发市场）</a></h4>
+                <p>摘要：       今天给各位分享广州卖狗市场的知识，其中也会对广州卖狗狗批发市场进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、广州宠物市场在哪里?想买只串.</p>
             </div>
         </div>
     </div>
@@ -370,8 +370,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-42744.htm">猫三针没打完可以打狂犬疫苗吗（猫咪没打完猫三联可以打狂犬疫苗吗）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈猫三针没打完可以打狂犬疫苗吗，以及猫咪没打完猫三联可以打狂犬疫苗吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫没有打三联可以打狂..</p>
+                <h4><a href="/news/article-21785.htm">宠物领养协议具有法律效应吗为什么还要签字（宠物领养协议需要身份证复印件吗）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈宠物领养协议具有法律效应吗为什么还要签字，以及宠物领养协议需要身份证复印件吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗给其他人..</p>
             </div>
         </div>
     </div>
@@ -380,8 +380,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-25-free-ssr-subscribe.htm">12月25日更新21.1M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、美国、香港、加拿大、韩国、日本、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-11-shadowrocket-node.htm">12月11日更新19M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、新加坡、日本、韩国、香港、美国、加拿大等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -390,8 +390,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-8-free-high-speed-nodes.htm">10月8日更新21.6M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、加拿大、香港、新加坡、欧洲、美国、日本等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-18-free-node-subscribe.htm">12月18日更新19.2M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、加拿大、新加坡、欧洲、韩国、日本、香港等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -402,7 +402,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">86</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
