--- a/date/2024-11/index.htm
+++ b/date/2024-11/index.htm
@@ -310,8 +310,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-18-free-node-subscribe.htm">12月18日更新19.2M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、加拿大、新加坡、欧洲、韩国、日本、香港等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-1-5-clash-windows.htm">1月5日更新20.2M/S，2025年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、香港、欧洲、新加坡、美国、加拿大、韩国等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -320,8 +320,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-45228.htm">Kotlin（二） 标准函数和静态方法</a></h4>
-                <p>1、标准函数 标准函数是指Standard.kt文件中定义的函数  1.1、let函数 let函数提供了函数式API编程接口，并将原始对象作为参数传递到Lambda表达式中，标准的写法如下： obj.</p>
+                <h4><a href="/news/article-26407.htm">动物生物疫苗工资 动物生物疫苗工资高吗</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物生物疫苗工资的问题，于是小编就整理了4个相关介绍动物生物疫苗工资的解答，让我们一起看看吧。牧原兽医待遇怎么样？万泰生物待遇怎</p>
             </div>
         </div>
     </div>
@@ -330,8 +330,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-38287.htm">面试之Java String 编码相关</a></h4>
-                <p>另有一篇我的字符编码本质入门的文章见这里：https://www.cnblogs.com/uncleguo/p/16008551.html 　　实话说，作为一个多年Java老年程序员，直到近来，在没有</p>
+                <h4><a href="/free-nodes/2024-10-8-free-high-speed-nodes.htm">10月8日更新21.6M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、加拿大、香港、新加坡、欧洲、美国、日本等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -340,8 +340,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-21-free-subscribe-node.htm">10月21日更新19.8M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、新加坡、加拿大、日本、欧洲、香港、韩国等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-25-free-ssr-subscribe.htm">12月25日更新21.1M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、美国、香港、加拿大、韩国、日本、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -350,8 +350,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-39771.htm">正规免费领养宠物的网站有哪些（免费领养宠物的app有哪些）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈正规免费领养宠物的网站有哪些，以及免费领养宠物的app有哪些对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、有哪些比较可靠的领养喵咪的..</p>
+                <h4><a href="/news/article-37307.htm">动物疫苗注射部位图片高清（动物疫苗的使用方法及注意事项）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗注射部位图片高清的知识，其中也会对动物疫苗的使用方法及注意事项进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗打.</p>
             </div>
         </div>
     </div>
@@ -360,8 +360,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-25476.htm">动物疫苗批号查询网 动物疫苗批号查询网站官网入口</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗批号查询网的问题，于是小编就整理了2个相关介绍动物疫苗批号查询网的解答，让我们一起看看吧。接种证没有编号可以去哪里查询？</p>
+                <h4><a href="/free-nodes/2024-12-14-shadowrocket-node.htm">12月14日更新18.5M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、韩国、日本、美国、加拿大、新加坡等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -370,8 +370,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-25941.htm">家用小型狗粮机器价格表（小型家用狗粮制作机）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈家用小型狗粮机器价格表，以及小型家用狗粮制作机对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、哪里有卖做猫粮狗粮的机器多少钱一台...  </p>
+                <h4><a href="/free-nodes/2024-11-27-free-clash-subscribe.htm">11月27日更新21.1M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、加拿大、香港、美国、欧洲、韩国、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -380,8 +380,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-37797.htm">饲料搅拌粉碎机安装图（饲料粉碎搅拌机百科）</a></h4>
-                <p>摘要：       今天给各位分享饲料搅拌粉碎机安装图的知识，其中也会对饲料粉碎搅拌机百科进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、选配与安装小型饲料加.</p>
+                <h4><a href="/news/article-35377.htm">义乌领养宠物的地方 义乌领养宠物的地方在哪里</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于义乌领养宠物的地方的问题，于是小编就整理了1个相关介绍义乌领养宠物的地方的解答，让我们一起看看吧。陈江河 为什么 收养 邱岩？陈</p>
             </div>
         </div>
     </div>
@@ -390,8 +390,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-34903.htm">包含福州免费领养宠物的平台有哪些的词条</a></h4>
-                <p>摘要：       今天给各位分享福州免费领养宠物的平台有哪些的知识，其中也会对进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、谁能推荐几个大型一点的宠物网站.</p>
+                <h4><a href="/news/article-28728.htm">国内十大宠物粮食品牌有哪些呢（国内十大宠物粮食品牌有哪些呢图片）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈国内十大宠物粮食品牌有哪些呢，以及国内十大宠物粮食品牌有哪些呢图片对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫粮品牌十大排行榜是..</p>
             </div>
         </div>
     </div>
@@ -402,7 +402,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">86</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
